# src/docs/swagger_output.json
@@ -411,6 +411,70 @@
         }
       }
     },
+    "/pending": {
+      "post": {
+        "tags": [
+          "Pending"
+        ],
+        "description": "",
+        "responses": {
+          "default": {
+            "description": ""
+          }
+        },
+        "security": [
+          {
+            "bearerAuth": []
+          }
+        ]
+      }
+    },
+    "/pending-user": {
+      "get": {
+        "tags": [
+          "Pending"
+        ],
+        "description": "",
+        "responses": {
+          "default": {
+            "description": ""
+          }
+        },
+        "security": [
+          {
+            "bearerAuth": []
+          }
+        ]
+      }
+    },
+    "/pending/{id}": {
+      "delete": {
+        "tags": [
+          "Pending"
+        ],
+        "description": "",
+        "parameters": [
+          {
+            "name": "id",
+            "in": "path",
+            "required": true,
+            "schema": {
+              "type": "string"
+            }
+          }
+        ],
+        "responses": {
+          "default": {
+            "description": ""
+          }
+        },
+        "security": [
+          {
+            "bearerAuth": []
+          }
+        ]
+      }
+    },
     "/kajian": {
       "post": {
         "tags": [
